--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,16 @@
     <title>Momentum</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <form id="login-form" class="hidden">
+        <input 
+            required
+            maxLength="15"
+            type="text" 
+            placeholder="What is your name?" 
+        />
+        <button>Log In</button>
+    </form>
+    <h1 class="username hidden"></h1>
+<script src="app.js"></script>
 </body>
 </html>
