--- a/index.htm
+++ b/index.htm
@@ -8,9 +8,14 @@
 </head>
 <body>
 <div id="weather">
-    <img></img>
-    <span></span>
-    <span></span>
+    <div class="weather-icon">
+        <img ></img>
+        <span>▲</span>
+    </div>
+    <div class="weather-info">
+        <span></span>
+        <span></span>
+    </div>
 </div>
 <div>
     <form id="login-form" class="hidden">
