--- a/index.htm
+++ b/index.htm
@@ -10,9 +10,9 @@
 <div id="weather">
     <div class="weather-icon">
         <img ></img>
-        <span>▲</span>
+        <span>▼</span>
     </div>
-    <div class="weather-info">
+    <div class="hidden">
         <span></span>
         <span></span>
     </div>
