--- a/index.htm
+++ b/index.htm
@@ -80,16 +80,13 @@
     </form>
 </div>
 <div class="todos">
-    <div>
-        <ul id="todo-list">
-        </ul>
-    </div>
-    <div>
-        <ul id="todo-list-second">
-        </ul>
-    </div>
+    <ul id="todos-list">
+    </ul>
 </div>
 
+<div class="resize none">
+    <span class="resize-notify">size is too small</span>
+</div>
 <script src="js/greeting.js"></script>
 <!-- <script src="js/clock.js"></script> -->
 <script src="js/quotes.js"></script>
